--- a/org-better-defaults.org
+++ b/org-better-defaults.org
@@ -18,7 +18,8 @@ Load the ~custom.el~ file so any UI changes you make get saved and loaded proper
 
 #+begin_src emacs-lisp
 (setq custom-file "~/.emacs.d/custom.el")
-(load custom-file)
+(if (file-exists-p custom-file)
+    (load custom-file))
 #+end_src
 ** Add Core Repositories
 Add additional repositories
@@ -158,6 +159,20 @@ There are several options for this kind of functionality, but I'm going with Hel
   )
 #+end_src
 
+** Default Org Location
+Org needs to know where to look for things and the most common place to put your org files is in your home directory. So first let's create the ~~/org~ directory if it doesn't already exist. Then we can associate all files ending in ~.org~ with ~org-mode~.
+
+#+begin_src emacs-lisp
+(if (not (file-directory-p (substitute-in-file-name "$HOME/org")))
+    (let ((org-dir (substitute-in-file-name "$HOME/org")))
+      (make-directory org-dir))
+  )
+
+(setq org-agenda-files '("~/org"))
+
+(add-to-list 'auto-mode-alist '("\\.org\\'" . org-mode))
+#+end_src
+
 ** Treemacs
 Treemacs needs to be installed because it will allow you to view the top two headings of org files. Effectively creating a top level outline view of all org files. This is incredibly useful. With this hook treemacs will start as soon as Emacs is launched. When that happens, it will prompt for the directory to use as the root of the project. I recommend using the org directory in your home directory (don't worry, it gets automatically created) as that is a pretty standard place to store your org files.
 
@@ -171,6 +186,7 @@ Treemacs needs to be installed because it will allow you to view the top two hea
         ("C-x t C-t" . treemacs-find-file)
         ("C-x t M-t" . treemacs-find-tag))
   )
+(treemacs-add-project "$HOME/org")
 #+end_src
 ** Improved Modeline
 This modeline is nicer than the default one. It is a small tweak, but I like it.
@@ -216,20 +232,6 @@ Making the UI a little easier to interact with.
 #+end_src
 
 * Core Org Mode Settings
-** Default Locations
-Org needs to know where to look for things and the most common place to put your org files is in your home directory. So first let's create the ~~/org~ directory if it doesn't already exist. Then we can associate all files ending in ~.org~ with ~org-mode~.
-
-#+begin_src emacs-lisp
-(if (not (file-directory-p (substitute-in-file-name "$HOME/org")))
-    (let ((org-dir (substitute-in-file-name "$HOME/org")))
-      (make-directory org-dir))
-  )
-
-(setq org-agenda-files '("~/org"))
-
-(add-to-list 'auto-mode-alist '("\\.org\\'" . org-mode))
-#+end_src
-
 ** Better Keybindings
 We can make things easier on ourselves with some better keybindings.
 
@@ -271,7 +273,7 @@ It is often helpful to record a timemstamp when a TODO item is marked done. You 
 ** Colors
 
 #+begin_src emacs-lisp
-(setq light-mode t)
+(setq light-mode nil)
 
 (if light-mode
   (setq
